Changelog
=========


2.1.1 (unreleased)
------------------

- Send Documents: Display documets in a task also in the document contenttree widget.
  Issue #1729 Hinzufuegen-Auswahl in E-Mail-Maske unvollstaendig (aus Aufgaben ref. Doks nicht aufgefuehrt)
  https://extranet.4teamwork.ch/extern/opengever-kanton-zug/sprint-backlog/1729
  [phgross]


2.1 (2012-09-12)
----------------

- Implements documents_as_link field in send_documents functionality.
  Issue #210 E-Mail-Versand ohne Dokument
  https://extranet.4teamwork.ch/support/ph-vs/tracker/210
  [phgross]

- Extract attachments: Added correct reindexing after setting default values.
  Issue #222 Metadaten Standort und Sprache
  https://extranet.4teamwork.ch/support/ph-vs/tracker/222
  [philippegross]

- Adjust mail workflow: Disable sharing actions (delegate roles).
  Issue #1613 Test Rot und Gelb 2.4: Mail hat versehentlich die Aktion Freigabe
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1613
  [phgross]

- Fixed missing argument for get_containg_document_tab_url().
  This fixes a traceback when cancelling send documents form.
  [lgraf]


2.0.4 (2012-06-19)
------------------

- Added filename fallback in content_type_helper for documents with wrong content type.
  [phgross]

- Fixed setting of content-type for attachments in send_documents
  [lgraf]

- Fixed encoding problems in send_documents functionality.
  Issue #1513 og.mail send_documents wirft UnicodeEncodeError
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1513
  [phgross]

- Fix attachment-fail when downloading file with IE.
  #1515 Mail-Anhang kann nicht geöffnet werden im Internet Explorer
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1515/
  [eschmutz]

- Added additional title field for mails, as OGMail behavior.
  Issue #1275 Originalen Mail-Titel bearbeiten koennen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1275/